--- a/index.html
+++ b/index.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GoogleFonts</title>
+  </head>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato&family=Madimi+One&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oxygen:wght@300;400;700&family=Press+Start+2P&family=Roboto+Slab&family=Tangerine:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato&family=Ma+Shan+Zheng&family=Madimi+One&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oxygen:wght@300;400;700&family=Press+Start+2P&family=Roboto+Slab&family=Tangerine:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Italianno&family=Lato&family=Liu+Jian+Mao+Cao&family=Ma+Shan+Zheng&family=Madimi+One&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oxygen:wght@300;400;700&family=Press+Start+2P&family=Roboto+Slab&family=Tangerine:wght@400;700&display=swap"
+    rel="stylesheet"
+  />
+
+  <style>
+    .first {
+      font-family: "Press Start 2P", system-ui;
+      font-weight: 400;
+      font-style: normal;
+    }
+    .second {
+      font-family: "Tangerine", cursive;
+      font-weight: 400;
+      font-style: normal;
+      color: red;
+      font-size: 2em;
+    }
+
+    .theerd {
+      font-family: "Ma Shan Zheng", cursive;
+      font-weight: 400;
+      font-style: normal;
+    }
+    .fourth {
+      font-family: "Liu Jian Mao Cao", cursive;
+      font-weight: 400;
+      font-style: normal;
+    }
+  </style>
+
+  <body>
+    <div class="first">
+      <h1>Mustafa Duyarer</h1>
+    </div>
+
+    <div class="second">
+      <h1>Serpil Duyarer</h1>
+    </div>
+
+    <div class="theerd">
+      <h2>Nihal Duyarer</h2>
+    </div>
+
+    <div class="fourth">
+      <h3>Sedanur Duyarer</h3>
+    </div>
+  </body>
 </html>
