--- a/index.html
+++ b/index.html
@@ -68,5 +68,9 @@
     <div class="fourth">
       <h3>Sedanur Duyarer</h3>
     </div>
+
+    <div class="fourth">
+      <h3>Sedanur Duyarer</h3>
+    </div>
   </body>
 </html>
