--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   />
 
   <style>
-    .first {
+    .first, .fifth{
       font-family: "Press Start 2P", system-ui;
       font-weight: 400;
       font-style: normal;
@@ -71,6 +71,10 @@
 
     <div class="fourth">
       <h3>Sedanur Duyarer</h3>
+    </div>
+
+    <div class="fifth">
+      <h1>SEDA DUYARER</h1>
     </div>
   </body>
 </html>
