--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="fifth">
-      <h1>SEDA DUYARER</h1>
+      <h1>SEDANUR DUYARER</h1>
     </div>
   </body>
 </html>
