--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
     <div class="fourth">
       <h3>Sedanur Duyarer</h3>
     </div>
+    <div class="fourth">
+      <h3>Sedanur Duyarer</h3>
+    </div>
 
     <div class="fifth">
       <h1>SEDANUR DUYARER</h1>
