--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       <h2>Nihal Duyarer</h2>
     </div>
 
+    <div class="theerd">
+      <h2>Nihal Duyarer</h2>
+    </div>
+
     <div class="fourth">
       <h3>Sedanur Duyarer</h3>
     </div>
