--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     <div class="theerd">
       <h2>Nihal Duyarer</h2>
     </div>
+    <div class="theerd">
+      <h2>Nihal Duyarer</h2>
+    </div>
 
     <div class="theerd">
       <h2>Nihal Duyarer</h2>
