--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     <div class="first">
       <h1>Mustafa Duyarer</h1>
     </div>
+    <div class="first">
+      <h1>Mustafa Duyarer</h1>
+    </div>
 
     <div class="first">
       <h1>Mustafa Duyarer</h1>
