--- a/index.html
+++ b/index.html
@@ -56,16 +56,8 @@
     <div class="first">
       <h1>Mustafa Duyarer</h1>
     </div>
-    <div class="first">
-      <h1>Mustafa Duyarer</h1>
-    </div>
-
-    <div class="first">
-      <h1>Mustafa Duyarer</h1>
-    </div>
-    
-    <div class="first">
-      <h1>Mustafa Duyarer</h1>
+    <div class="second">
+      <h1>Serpil Duyarer</h1>
     </div>
 
     <div class="second">
