yeni bir feature added

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <div class="first">
       <h1>Mustafa Duyarer</h1>
     </div>
-    <div class="second">
-      <h1>Serpil Duyarer</h1>
+    <div class="first">
+      <h1>Mustafa Duyarer</h1>
     </div>
-    <div class="second">
-      <h1>Serpil Duyarer</h1>
-    </div>
-  
 
+    <div class="second">
+      <h1>Serpil Duyarer</h1>
+    </div>
+ 
     <div class="theerd">
       <h2>Nihal Duyarer</h2>
     </div>
